fix(apollo,look&feel): fix column gap in Accordion Contextual (#1648)

--- a/packages/canopee-css/src/prospect-client/AccordionContextual/AccordionContextualCommon.css
+++ b/packages/canopee-css/src/prospect-client/AccordionContextual/AccordionContextualCommon.css
@@ -1,5 +1,5 @@
 .af-apollo-accordion-contextual .af-apollo-accordion__summary {
-  --accordion-contextual-column-gap: calc(12 / var(--font-size-base) * 1rem);
+  --accordion-contextual-column-gap: calc(16 / var(--font-size-base) * 1rem);
   --accordion-contextual-gap: calc(4 / var(--font-size-base) * 1rem);
   --accordion-contextual-row-gap: calc(2 / var(--font-size-base) * 1rem);
   --spacing-summary-inline: calc(12 / var(--font-size-base) * 1rem);
@@ -11,10 +11,6 @@
   align-items: center;
   gap: var(--accordion-contextual-gap) var(--accordion-contextual-column-gap);
   font-family: var(--font-family-base);
-
-  @media (--desktop-small) {
-    --accordion-contextual-column-gap: calc(16 / var(--font-size-base) * 1rem);
-  }
 
   .af-icon:first-child {
     grid-area: icon;
